# probable-spork

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  engine.cpp  engine.hpp  main.cpp  shader.cpp  shader.hpp  window.cpp  window.hpp
.cache/clangd/index/: _fixes.hpp.9F8F0E0A7F408FB9.idx  _vectorize.hpp.B71B7F0068888CD4.idx  common.hpp.B77B5D386375B7C2.idx  compute_common.hpp.20B7575E91B572D7.idx  compute_vector_relational.hpp.9FA29F72D6073ED2.idx  constants.hpp.92B4B9E6B1BA1A1F.idx  constants.inl.7B5C5432B9F8DA4F.idx  context.c.9237BDA772C6F074.idx  egl_context.c.34B9A1BFD3BD9EC1.idx  epsilon.hpp.6F96EF517F5BC342.idx  epsilon.inl.0B06C5BDEC570FC5.idx  exponential.hpp.EB963021CD0D4AA3.idx  func_common.inl.D06826EC8945D4ED.idx  func_exponential.inl.1B96DBC1CFD7F34C.idx  func_geometric.inl.8887D69B873E0D67.idx  func_integer.inl.D08992FEB8A81B94.idx  func_matrix.inl.0D1DC8266432A5D0.idx  func_packing.inl.23944A057A1969F5.idx  func_trigonometric.inl.F82F28B55B18E615.idx  func_vector_relational.inl.9F48498DB53381B8.idx  fwd.hpp.A491B38B1B71D38D.idx  geometric.hpp.B1DE6094E1F5D328.idx  gl_conf.hpp.A588B14892E65418.idx  glad.c.BA337E61701E3760.idx  glad.h.27AA9934A2EE5642.idx  glfw3.h.E86FFA37B649F824.idx  glm.hpp.BEE7CBF49F9AB5EB.idx  glx_context.c.C4D963277E6F7372.idx  init.c.D743BFE0DBAA64FD.idx  input.c.CD3A3E648E7443C5.idx  integer.hpp.D5EF1608FEA8C09C.idx  internal.h.91BA4E6970C4304B.idx  khrplatform.h.BC3A61C5E50E87A1.idx  linux_joystick.c.C25CB370AE9B303A.idx  linux_joystick.h.FF090288E595F240.idx  main.cpp.0E693C02F166313E.idx  mappings.h.8D4C42DC26C9D426.idx  mat2x2.hpp.FDF7A64B2361025A.idx  mat2x3.hpp.A5FF719A687DD7E1.idx  mat2x4.hpp.BAD29C2C4CAEE4D7.idx  (+190 more)
assets/: chair.mtl  cube_triangulated.mtl
collisions/: collision_manager.cpp  collision_manager.hpp
components/: transform.cpp  transform.hpp
controls/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
entities/: camera.cpp  camera.hpp  entity.cpp  entity.hpp  mesh.cpp  mesh.hpp  node.cpp  node.hpp  player.cpp  player.hpp  renderable_manager.cpp  renderable_manager.hpp  renderable_object.cpp  renderable_object.hpp  skinned_node.hpp  wireframe.cpp  wireframe.hpp  world_light.cpp  world_light.hpp
entities/entities/: entity.cpp  entity.hpp  player.hpp  primitive_entity_factory.cpp  primitive_entity_factory.hpp
entities/mesh/: node.hpp
entities/mesh/primitive/: colored_primitive.cpp  textured_primitive.hpp
events/: event_handler.cpp  event_handler.hpp  events.hpp  mouse.cpp  mouse.hpp  subscriber.cpp  subscriber.hpp
renderables/: renderable_manager.cpp  skinned_node.hpp  wireframe.cpp  wireframe.hpp  world_light.hpp
renderables/entities/: camera.cpp  camera.hpp  entity.hpp  player.cpp  primitive_entity_factory.cpp  primitive_entity_factory.hpp
renderables/mesh/: mesh.cpp  mesh.hpp  mesh_builder.cpp  mesh_builder.hpp  node.cpp
renderables/mesh/primitive/: colored_primitive.cpp  colored_primitive.hpp  primitive.cpp  primitive.hpp  textured_primitive.cpp
shaders/: fragment_shader.frag  fragment_shader_colored.frag  fragment_shader_mod.frag  fragment_shader_textured.frag  lightning_calculations.glsl  shader_manager.cpp  shader_manager.hpp  vertex_shader.vert  vertex_shader_colored.vert  vertex_shader_textured.vert  wf_fragment_shader.frag  wf_vertex_shader.vert
tests/: CMakeLists.txt  event_handler_test.cpp  glm_matchers.cpp  obj_loader_test.cpp  test_txt.txt  tests.sh
utilities/: deltatime.cpp  deltatime.hpp  gl_conf.hpp  gltf_loader.cpp  gltf_loader.hpp  logger.cpp  logger.hpp  matrices.cpp  obj.cpp  obj.hpp  types.hpp
world/: context.cpp  context.hpp
